ghost_example/ghost-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/success-codes: 200,301
  labels:
    app: ghost
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ghost
              servicePort: 2368
